fix: Add custome scrollbar for ingredients and Deshi menu

--- a/apps/feedahelp/src/styles/globals.css
+++ b/apps/feedahelp/src/styles/globals.css
@@ -3,10 +3,32 @@
 @tailwind utilities;
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+.customScrollBar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0.375rem rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 0.625rem;
+}
+
+.customScrollBar::-webkit-scrollbar {
+  width: 0.625rem;
+  background-color: #f5f5f5;
+}
+
+.customScrollBar::-webkit-scrollbar-thumb {
+  border-radius: 0.625rem;
+ background-color:rgba(250, 121, 46, 0.686); 
+}
+
+.customScrollBar::-webkit-scrollbar-thumb:hover {
+  border-radius: 0.625rem;
+ background-color:rgb(250, 121, 46); 
+}
+
 
 @import url("imageCarousal.css");
 
